Solved w/ no text-wrap on page resizing

--- a/Unsolved/style.css
+++ b/Unsolved/style.css
@@ -1,83 +1,114 @@
 body {
-    background-color: rgb(59, 28, 30);
-    margin: 2em;
-}
-header {
+    background: #3f282b;
+    padding: 28px;
     color: white;
-    font-family: "Source Sans Pro";
-    font-size: 25px;
-    font-weight: bold;
-    padding-bottom: 10px;
-}
-main {
-    display: grid;
-    grid-template-columns: 45% 55%;
-    position: relative;
-    justify-content: center;
-    grid-gap: 10px;
-}
-.happy {
-    font-family: "Montserrat";
-    font-size: 50px;
-    background-color: red;
-    color: white;
-    font-weight: bold;
-    padding-top: 250px;
-    overflow-wrap: break-word;
-    padding-left: 30px;
-    line-height: 1.75;
-    grid-row: span 2;
-}
-.lorem {
-    background-color: rgb(48, 158, 140);
-    font-family: "Source Sans Pro";
-    color: white;
-    font-size: 25px;
     line-height: 2;
-    font-weight: bold;
-    overflow-wrap: break-word;
-    padding-left: 30px;
-    padding-top: 10px;
-    grid-row: span 2;
-}
-.tie {
-    grid-column: span 2;
-    overflow: hidden;
-    width: 100%;
-    grid-row: span 1;
-    object-fit: fill;
-}
-
-.moped {
-    object-fit: fill;
-    grid-column: span 2;
-}
-.sax, .flower, .light, #forty {
-    visibility: hidden;
-}
-.sign {
-    object-fit: fill;
-    grid-row: span 2;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 14px;
+  }
+  
+  main {
+    display: grid;
+    grid-gap: 4px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto, 1fr);
+  }
+  
+  .header {
+    padding: 40px;
+  }
+  
+  .box{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 15px;
+    min-height: 150px;
     
+  }
+  
+  h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+    font-weight: 800;
+    text-transform: uppercase;
+  }
+  
+  .box .image {
+    background: cover;
+  }
+  
+  .green {
+    background: #79bdad;
+    
+  }
+  
+  .bright {
+    background: #F03A47;
+    grid-row: span 2;
+  }
+  
+  .lg-rect {
+    grid-row: span 2;
+    grid-column: span 2;
+  }
+  
+  .sm_rect {
+    grid-row: span 2;
+    text-overflow: ellipsis;
+    white-space: pre-wrap;
     overflow: hidden;
-}
-#sign {
-    height: 500px;
-}
-#moped {
-    overflow: hidden;
-    width: 100%;
-}
-@media only screen and (min-width: 600px) {
+  }
+  
+  .c{
+    background: -65px 2px url('images/tie.png');
+    background: contain;
+  }
+  
+  .g{
+    background: -30px 200px url('images/light.jpg');
+  }
+  
+  .d{
+    background: -30px 280px url('images/sign.jpg');
+  }
+  
+  .f{
+    background: 0 300px url('images/moped.jpg');
+  }
+  
+  .i{
+    background: 0 300px url('images/sax.jpg');
+  }
+  
+  .j{
+    background: -30px 300px url('images/flower.jpg');
+    grid-column: span 2;
+  }
+  
+  @media only screen and (min-width: 600px) {
     main {
-        grid-template-rows: repeat (4, 1fr);
-        grid-template-columns: repeat(5, 1fr);
+      display: grid;
+      grid-gap: 4px;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      height: 600px;
     }
-    img {
-        visibility: visible;
+  
+    .lg-rect {
+      grid-row: span 2;
+      grid-column: span 2;
     }
-    .happy {
-        grid-area: 1 / 1;
+    
+    .sm_rect {
+      grid-row: span 2;
     }
- 
-}
+  
+    .bright {
+      grid-row: span 1;
+    }
+  
+    .j{
+      grid-column: span 1;
+    }
+  }
